LPS-8499 - Search button on forms are not aligned correctly on IE
git-svn-id: svn://svn.liferay.com/repos/public/portal/trunk@51831 05bdf26c-840f-0410-9ced-eb539d925f36

--- a/portal-web/docroot/html/themes/_styled/css/forms.css
+++ b/portal-web/docroot/html/themes/_styled/css/forms.css
@@ -30,6 +30,11 @@ fieldset {
 	margin-right: 0;
 }
 
+.aui-search-bar .aui-field-content, .aui-search-bar .aui-button-content {
+	display: inline-block;
+	vertical-align: middle;
+}
+
 .aui-field-choice .aui-field-label {
 	display: inline-block;
 }
